db_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "dbpod"

spec:
  containers:
  - name: "mycdb"
    image: "mysql"
