pvc_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "mypod3"
  labels:
    region: IN
spec:
  volumes:
  - name: s1
    persistentVolumeClaim:
       claimName: myrahulpvc

  containers:
  - name: "myc2"
    image: "vimal13/apache-webserver-php"
    volumeMounts:
     - mountPath: /var/www/data
       name: s1
