seccontext.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: myc1
    image: vimal13/apache-webserver-php
    securityContext:
  #     runAsUser: 1002
       capabilities:
         drop: [ "NET_RAW" ]
