service_clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mywebsvcpriv
spec:
  type: ClusterIP
  selector:
    dc: IN
  ports:
    - port: 80
      targetPort: 80
