service_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mywebservice
spec:
  type: NodePort
  selector:
    dc: IN
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
