firewall_deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alldeny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
